# marketing-chatgpt

./: .dockerignore  .env.example  .env.prod.example  .env.staging.example  .gitignore  .sops.yaml  AGENTS.md  FinalCodingHours.md  Final_Implementations.md  PLAYWRIGHT_REPORT.md  README.md  REVIEW_REPORT.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  start.sh  vpspass.txt
apps/api/: Dockerfile  Dockerfile.prod  alembic_stripe.ini  pyproject.toml  pytest.ini
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 0001_initial.py  0002_public_leads_newsletter.py  0003_bug_reports.py  0004_stripe_webhook_events.py  0005_chat_messages.py  038af67121a3_add_consultation_bookings_table.py  197326810f81_add_unique_email_to_leads.py  220646cbf9d4_add_generated_content.py  5b5f336f4479_add_marketing_readiness_assessments.py  a1b2c3d4e5f6_add_backlink_analyzer_tables.py  b2c3d4e5f6a7_add_ab_testing_tables.py  c3d4e5f6a7b8_add_keyword_research_tables.py  d7f8c2b211d3_add_seo_audits.py  e42f0e3a3206_add_competitor_comparisons.py  e99d8c83f77d_add_chat_ai_enhancements.py  fe0ae519a216_add_email_automation.py
apps/api/src/marketing_api/: celery_app.py  main.py  posthog_client.py  settings.py  stripe_catalog.py
apps/api/src/marketing_api/auth/: bootstrap.py  dependencies.py  repository.py  service.py  tokens.py
apps/api/src/marketing_api/db/: __init__.py  models.py  session.py  stripe_base.py  stripe_session.py
apps/api/src/marketing_api/graphql/: inputs.py  schema.py  types.py
apps/api/src/marketing_api/middleware/: alerts.py  posthog.py
apps/api/src/marketing_api/notifications/: email.py  pushover.py
apps/api/src/marketing_api/routes/: ab_testing.py  admin_dashboard.py  auth.py  backlink_analyzer.py  chat_ai.py  competitor.py  consultation.py  consultation_admin.py  content.py  email_admin.py  health.py  (+8 more)
apps/api/stripe_migrations/: env.py
apps/api/stripe_migrations/versions/: 0001_stripe_transactions.py
apps/api/tests/: test_auth.py
(+309 files in other folders)
